--- a/css/dark.css
+++ b/css/dark.css
@@ -14,11 +14,11 @@ body.dark-mode {
 #theme-toggle {
   position: fixed;
   top: 20px;
-  right: 20px;
+  left: 20px;
   padding: 10px;
   cursor: pointer;
 }
-    button {
+button {
       padding: 15px 30px;
       font-size: 1.2em;
       margin: 20px;
