--- a/css/reflexes_clavier.css
+++ b/css/reflexes_clavier.css
@@ -42,7 +42,7 @@
     }
     #summary {
       display: none;
-      background: white;
+      background: rgba(255, 255, 255, 0.404);
       padding: 30px;
       border-radius: 16px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
@@ -64,7 +64,21 @@
       font-size: 22px;
       margin-top: 5px;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
+ #letter.flash {
+  animation: pop 0.2s ease;
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(1);
+
+  }
+  50% {
+    transform: scale(1.5);
+
+  }
+  100% {
+    transform: scale(1);
+
+  }
+}
