--- a/css/how_many_seconds.css
+++ b/css/how_many_seconds.css
@@ -15,14 +15,14 @@
       padding: 15px 30px;
       font-size: 1.2em;
       margin: 20px;
-      background-color: #4285f4;
+      background-color: #11c22f;
       color: white;
       border: none;
       border-radius: 8px;
       transition: background-color 0.3s;
     }
     button:hover {
-      background-color: #3367d6;
+      background-color: #0f8f2b;
     }
     #message {
       font-size: 1.4em;
