--- a/css/reflexes_clavier.css
+++ b/css/reflexes_clavier.css
@@ -27,18 +27,16 @@
     }
     #startBtn, #replayBtn {
       padding: 15px 30px;
-      font-size: 20px;
-      border: none;
-      background: #4CAF50;
+      font-size: 1.2em;
+      margin: 20px;
+      background-color: #11c22f;
       color: white;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s ease;
-      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      transition: background-color 0.3s;
     }
     #startBtn:hover, #replayBtn:hover {
-      background: #45a049;
-      transform: scale(1.05);
+      background-color: #0f8f2b;
     }
     #summary {
       display: none;
