--- a/css/startgo.css
+++ b/css/startgo.css
@@ -42,19 +42,18 @@
     }
 
     #startBtn {
-      padding: 10px 20px;
-      font-size: 16px;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      margin: 20px;
+      background-color: #11c22f;
+      color: white;
       border: none;
       border-radius: 8px;
-      background: #4caf50;
-      color: white;
-      cursor: pointer;
-      margin: 5px;
-      transition: background 0.3s;
+      transition: background-color 0.3s;
     }
 
     #startBtn:hover {
-      background: #43a047;
+      background-color: #0f8f2b;
     }
 
     #resetBtn {
