--- a/css/how_many_seconds.css
+++ b/css/how_many_seconds.css
@@ -2,6 +2,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
       padding-top: 50px;
+      display: block;
     }
     h1 {
       font-size: 2em;
