--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,17 @@ body {
       font-size: 2.5rem;
       margin-bottom: 1rem;
     }
+    .gridlink{
+      margin: 0 auto;
+      max-width: 1800px;
+      display: grid;
+      gap: 5px; 
+      justify-content: center;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    }
     .game-link {
       display: block;
-      margin: 15px auto;
+      margin: 0 auto;
       color: #000000;
       padding: 15px 30px;
       background: rgba(255, 255, 255, 0.404);
@@ -76,6 +84,7 @@ body {
       display: none;
     }
     #howToBtn{
+      margin-top: 20px;
       border-color: #00000000;
     }
 
@@ -83,11 +92,11 @@ body {
       display: inline-block;
       padding: 12px 24px;
 
-      /* font-size: 1rem; */
+
       border-radius: 10px;
       cursor: pointer;
       transition: background 0.3s;
-      margin: 20px auto 0 auto;
+      margin: 0px auto 0 auto;
     }
 
     .custom-file-upload:hover {
