--- a/bored-at-school-main/bored-at-school-main/css/dark.css
+++ b/bored-at-school-main/bored-at-school-main/css/dark.css
@@ -9,20 +9,7 @@ body.dark-mode {
   background-color: #121212;
   color: #f1f1f1;
 }
-.game-link.dark-mode{
 
-      display: block;
-      margin: 15px auto;
-      color: #ffffff;
-      padding: 15px 30px;
-      background-color: #ffffff86;
-      text-decoration: none;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      width: 280px;
-      transition: background 0.3s;
-    
-}
 /* Pour le bouton (optionnel, à styliser à ta sauce) */
 #theme-toggle {
   position: fixed;
@@ -31,7 +18,7 @@ body.dark-mode {
   padding: 10px;
   cursor: pointer;
 }
-button.dark {
+button {
       padding: 15px 30px;
       font-size: 1.2em;
       margin: 20px;
@@ -41,9 +28,6 @@ button.dark {
       border-radius: 8px;
       transition: background-color 0.3s;
     }
-    button.dark:hover {
+    button:hover {
       background-color: #3367d6;
-    }
-    iframe{
-      max-width: 90%;
     }
